--- a/twitter.html
+++ b/twitter.html
@@ -34,7 +34,7 @@
     </li>
     <li class="pch-tb-footer"><a href="pch-tb-refresh">refresh</a></li>
 </ul>
-
+<script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
