--- a/twitter.html
+++ b/twitter.html
@@ -20,20 +20,12 @@
                     </li>
                 </ul>
             </li>
-            <li class="pch-tb-node">
-                <ul>
-                    <li class="pch-tb-node-avatar"><img src="http://dummyimage.com/50x50/00ff00/0011ff.gif"></li>
-                    <li class="pch-tb-node-text">
-                        <div class="pch-tb-node-nick">@justiceowl</div><p class="pch-tb-node-entry">Some tweet who cares what is says it
-                        could be lorem ipsum for all i care...
-                    </p>
-                    </li>
-                </ul>
-            </li>
         </ul>
     </li>
     <li class="pch-tb-footer"><a href="pch-tb-refresh">refresh</a></li>
 </ul>
+<ul id="test"></ul>
+<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
 
 </body>
